--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -9,3 +9,8 @@ speak=Speak
 # Menu Bar
 file=File
 exit=Exit
+
+# Dialog
+error=Error
+soundPlaybackError=Something whent wrong while trying to play back the synthesized text.
+noVoiceSelected=Please specify a voice.
