Add support for word wrap.

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -8,9 +8,12 @@ speak=Speak
 
 # Menu Bar
 file=File
+
+view=View
+viewWordWrap=Word Wrap
+
 exit=Exit
 
 # Dialog
 error=Error
 soundPlaybackError=Something whent wrong while trying to play back the synthesized text.
-noVoiceSelected=Please specify a voice.
