--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.aleksander</groupId>
-    <artifactId>PollySpeaks</artifactId>
+    <artifactId>polly-speaks</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <name>Polly Speaks</name>
