Warn user before overwriting a file when saving.

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -9,7 +9,7 @@ speak=Speak
 # Menu Bar
 file=File
 open=Open...
-save=Save...
+save=Save As...
 
 view=View
 viewWordWrap=Word Wrap
@@ -19,3 +19,5 @@ exit=Exit
 # Dialog
 error=Error
 soundPlaybackError=Something whent wrong while trying to play back the synthesized text.
+warning=Warning
+overwriteFile=File already exists, overwrite it?
