Don't show "Save As..." if the file has already been saved once before, show file name in title bar and add support for "New File".

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -8,8 +8,10 @@ speak=Speak
 
 # Menu Bar
 file=File
+new=New
 open=Open...
-save=Save As...
+save=Save...
+saveAs=Save As...
 
 view=View
 viewWordWrap=Word Wrap
