Add error handling for reading files.

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -23,3 +23,5 @@ error=Error
 soundPlaybackError=Something whent wrong while trying to play back the synthesized text.
 warning=Warning
 overwriteFile=File already exists, overwrite it?
+noSuchFile=Specified file does not exist!
+errorReadingFile=Unable to read file. Please ensure it is a plain text file.
