--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -25,3 +25,4 @@ warning=Warning
 overwriteFile=File already exists, overwrite it?
 noSuchFile=Specified file does not exist!
 errorReadingFile=Unable to read file. Please ensure it is a plain text file.
+fileNotSaved=File has not been saved. Are you sure you wish to quit?
