--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -12,11 +12,16 @@ new=New
 open=Open...
 save=Save...
 saveAs=Save As...
+exportToAudioFile=Export to Audio File...
 
 view=View
 viewWordWrap=Word Wrap
 
 exit=Exit
+
+# Export Dialog
+outputFormat=Output format:
+export=Export
 
 # Dialog
 error=Error
@@ -26,4 +31,4 @@ overwriteFile=File already exists, overwrite it?
 noSuchFile=Specified file does not exist!
 errorReadingFile=Unable to read file. Please ensure it is a plain text file.
 fileNotSaved=File has not been saved. Are you sure you wish to quit?
-awsSdkError=There was an issue connecting to AWS. Please ensure you have configured your AWS IAM credentials and region. The application will now quit. 
+awsSdkError=There was an issue connecting to AWS. Please ensure you have configured your AWS IAM credentials and region. The application will now quit.
