Use system Look and Feel.

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -32,3 +32,4 @@ noSuchFile=Specified file does not exist!
 errorReadingFile=Unable to read file. Please ensure it is a plain text file.
 fileNotSaved=File has not been saved. Are you sure you wish to quit?
 awsSdkError=There was an issue connecting to AWS. Please ensure you have configured your AWS IAM credentials and region. The application will now quit.
+failedToStartError=There was an error starting the application.
