--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>14</maven.compiler.source>
         <maven.compiler.target>14</maven.compiler.target>
+        <jlfgr.version>1_0</jlfgr.version>
         <junit.version>5.6.2</junit.version>
         <pollysdk.version>1.11.784</pollysdk.version>
         <soundlibs.version>1.0.1.4</soundlibs.version>
@@ -22,6 +23,13 @@
     </properties>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/net.java.linoleum/jlfgr -->
+        <dependency>
+            <groupId>net.java.linoleum</groupId>
+            <artifactId>jlfgr</artifactId>
+            <version>${jlfgr.version}</version>
+        </dependency>
+
         <!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-polly -->
         <dependency>
             <groupId>com.amazonaws</groupId>
