Refactoring, add support for SSML, and improve look of SettingsPanel.

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -1,10 +1,11 @@
 applicationTitle=Polly Speaks
 
 # Settings Panel
-voiceSettings=Voice Settings
 language=Language
 voice=Voice
 speak=Speak
+ssml=SSML
+useSSML=Use Speech Synthesis Markup Language.
 
 # Menu Bar
 file=File
@@ -14,8 +15,8 @@ save=Save...
 saveAs=Save As...
 exportToAudioFile=Export to Audio File...
 
-view=View
-viewWordWrap=Word Wrap
+format=Format
+formatWordWrap=Word Wrap
 
 exit=Exit
 
@@ -26,6 +27,7 @@ export=Export
 # Dialog
 error=Error
 soundPlaybackError=Something whent wrong while trying to play back the synthesized text.
+ssmlParseError=There was an error parsing the SSML. Unable to convert text to speech.
 warning=Warning
 overwriteFile=File already exists, overwrite it?
 noSuchFile=Specified file does not exist!
