Refactoring of code related to file handling.

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -13,6 +13,8 @@ new=New
 open=Open...
 save=Save...
 saveAs=Save As...
+dontSave=Don't Save
+cancel=Cancel
 exportToAudioFile=Export to Audio File...
 
 format=Format
@@ -35,3 +37,5 @@ errorReadingFile=Unable to read file. Please ensure it is a plain text file.
 fileNotSaved=File has not been saved. Are you sure you wish to quit?
 awsSdkError=There was an issue connecting to AWS. Please ensure you have configured your AWS IAM credentials and region. The application will now quit.
 failedToStartError=There was an error starting the application.
+replaceUnsavedFile=Do you want to save changes to
+untitled=Untitled
