Add ability to change font and set default font size to 11.

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -9,6 +9,7 @@ export=Export
 exportToAudioFile=Export to Audio File...
 failedToStartError=There was an error starting the application.
 file=File
+font=Font...
 format=Format
 formatWordWrap=Word Wrap
 language=Language
