--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
             <artifactId>log4j-core</artifactId>
             <version>${log4j.version}</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/com.rover12421.opensource/JFontChooser -->
+        <dependency>
+            <groupId>com.rover12421.opensource</groupId>
+            <artifactId>JFontChooser</artifactId>
+            <version>1.0.5-3</version>
+        </dependency>
     </dependencies>
 
     <build>
