Correct spelling mistake.

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -21,7 +21,7 @@ overwriteFile=File already exists, overwrite it?
 replaceUnsavedFile=Do you want to save changes to
 save=Save...
 saveAs=Save As...
-soundPlaybackError=Something whent wrong while trying to play back the synthesized text.
+soundPlaybackError=Something went wrong while trying to play back the synthesized text.
 speak=Speak
 ssml=SSML
 ssmlParseError=There was an error parsing the SSML. Unable to convert text to speech.
