--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,10 @@
         <maven.compiler.target>14</maven.compiler.target>
         <jlfgr.version>1_0</jlfgr.version>
         <junit.version>5.6.2</junit.version>
-        <pollysdk.version>1.11.789</pollysdk.version>
+        <pollysdk.version>1.11.797</pollysdk.version>
         <soundlibs.version>1.0.1.4</soundlibs.version>
         <log4j.version>2.13.3</log4j.version>
+        <jfontchooser.version>1.0.5-3</jfontchooser.version>
     </properties>
 
     <dependencies>
@@ -78,7 +79,7 @@
         <dependency>
             <groupId>com.rover12421.opensource</groupId>
             <artifactId>JFontChooser</artifactId>
-            <version>1.0.5-3</version>
+            <version>${jfontchooser.version}</version>
         </dependency>
     </dependencies>
 
